--- a/css/main.css
+++ b/css/main.css
@@ -24,6 +24,7 @@ body {
 
 #particles-js{
   height: 99.7%;
+  width: 100%;
   position:absolute;
 }
 .contact{
@@ -50,38 +51,71 @@ body {
   font-size: 3vw;
 }
 
-a.button1 {
-  font-size: 50px;
+/* btn from uiverse.io by @EmmaxPlay */
+.btn {
+  font-size: 48px;
   display: inline-block;
   padding: 0.2em 1em;
   margin: 0 0.3em 0.3em 0;
-  border-radius: 0.15em;
-  box-sizing: border-box;
   color: white;
   text-decoration: none;
-  background-color: rgb(32, 32, 32);
   text-align: center;
   position: relative;
-  box-shadow: 0.1em 0.1em 0 0 rgb(48, 48, 48);
-  bottom: 0em;
-  right: 0em;
-}
-
-a.button1:hover {
-  bottom: -0.1em;
-  right: -0.1em;
-  transition: bottom 0.05s;
-  transition: right 0.05s;
-  box-shadow: 0.02em 0.02em 0 0 rgb(48, 48, 48);
-}
-
-@media all and (max-width:30em) {
-  a.button1 {
-    display: block;
-    margin: 0.4em auto;
+  border: none;
+  outline: none;
+  font-family: inherit;
+  cursor: pointer;
+  z-index: 0;
+ }
+ 
+ .btn::after {
+  content: "";
+  z-index: -1;
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background-color: rgb(32, 32, 32);
+  left: 0;
+  top: 0;
+  border-radius: 10px;
+ }
+ /* glow */
+ .btn::before {
+  content: "";
+  background: linear-gradient(
+     45deg,
+     #FF0000, #002BFF, #FF00C8, #002BFF,
+       #FF0000, #002BFF, #FF00C8, #002BFF
+ );
+  position: absolute;
+  top: -2px;
+  left: -2px;
+  background-size: 600%;
+  z-index: -1;
+  width: calc(100% + 4px);
+  height: calc(100% + 4px);
+  filter: blur(8px);
+  animation: glowing 20s linear infinite;
+  transition: opacity .3s ease-in-out;
+  border-radius: 10px;
+  opacity: 0;
+ }
+ 
+ @keyframes glowing {
+  0% {
+   background-position: 0 0;
   }
-  a.button2 {
-    display: block;
-    margin: 0.4em auto;
+ 
+  50% {
+   background-position: 400% 0;
   }
-}
+ 
+  100% {
+   background-position: 0 0;
+  }
+ }
+ 
+ /* hover */
+ .btn:hover::before {
+  opacity: 1;
+ }
