--- a/css/main.css
+++ b/css/main.css
@@ -65,6 +65,7 @@ body {
   outline: none;
   font-family: inherit;
   cursor: pointer;
+  opacity: 95%;
   z-index: 0;
  }
  
@@ -74,7 +75,7 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background-color: rgb(32, 32, 32);
+  background-color: rgb(16, 16, 16);
   left: 0;
   top: 0;
   border-radius: 10px;
