--- a/css/main.css
+++ b/css/main.css
@@ -1,24 +1,13 @@
-html{
+html, body {
+  width: 100%;
   height: 100%;
 }
 
-body{ height:100vh; margin:0; }
-
-header{ min-height:30px; background:dimgray;}
-footer{ min-height:30px; background:dimgray;}
-
-footer{
-  margin-top:auto; 
-}
-
 body {
-  display:flex; 
-  flex-direction:column; 
-  height:100%;
   margin: 0;
   background-repeat: no-repeat;
   background-attachment: fixed;
-  font: normal 75% Arial, Helvetica, sans-serif;
+  font: normal 75% sans-serif;
   background: radial-gradient(rgb(64, 64, 64), rgb(16, 16, 16));
 }
 
@@ -27,9 +16,31 @@ body {
   width: 100%;
   position:absolute;
 }
+
+.grid {
+  min-height: 100vh;
+  display: grid;
+  grid-template-rows: auto 1fr auto;
+  grid-template-columns: 100%;
+  grid-template-areas:
+  "header"
+  "main"
+  "footer";
+}
+
+.main {
+  margin-top: 3vh;
+  grid-area: main;
+  border-radius: 10px;
+}
+
+.footer {
+  grid-area: footer;
+  background-color: dimgray;
+}
+
 .contact{
   font-size: 22px;
-  color: white;
 }
 
 .text {
@@ -48,7 +59,9 @@ body {
 }
 
 .name {
-  font-size: 3vw;
+  font-size: 4.5vh;
+  margin-bottom: 3vh;
+  text-align: center;
 }
 
 /* btn from uiverse.io by @EmmaxPlay */
