--- a/css/main.css
+++ b/css/main.css
@@ -69,7 +69,7 @@ body {
   font-size: 48px;
   display: inline-block;
   padding: 0.2em 1em;
-  margin: 0 0.3em 0.3em 0;
+  margin-top: 0.3em;
   color: white;
   text-decoration: none;
   text-align: center;
